--- a/index.html
+++ b/index.html
@@ -71,37 +71,7 @@ article>
 
   <script src="assets/js/main.js" defer></script>
 </body>
-</html>    .section-title{font-size:1.25rem;font-weight:700;margin-bottom:.75rem;text-align:center}
-
-    .projects{
-      display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:1rem;
-    }
-    .card{
-      background:var(--card);padding:1rem;border-radius:12px;box-shadow:var(--shadow);
-    }
-    .card h3{margin:.25rem 0 .5rem}
-    .tech-tags{display:flex;gap:.5rem;flex-wrap:wrap}
-    .tag{background:#eef2ff;color:#3730a3;padding:.25rem .5rem;border-radius:8px;font-size:.8rem}
-
-    .contact{
-      margin-top:2rem;padding:2rem;border-radius:12px;background:#f3f4f6;text-align:center;
-    }
-    .contact p{margin:.5rem auto 1rem;color:var(--muted)}
-    footer{
-      margin-top:2rem;padding:1.25rem 0;color:var(--muted);text-align:center;font-size:.9rem;
-    }
-    .social{display:flex;gap:.5rem;justify-content:center;flex-wrap:wrap;margin-top:.5rem}
-    .social a{color:var(--muted);text-decoration:none;padding:.35rem .6rem;border-radius:6px;border:1px solid rgba(15,23,42,0.04);font-weight:600}
-
-    /* Responsive tweaks */
-    @media (min-width:720px){
-      .hero{padding:4rem}
-      .hero h1{font-size:2rem}
-    }
-    @media (max-width:540px){
-      header{padding:.5rem 0}
-      .logo{width:44px;height:44px}
-    }
+</html>    
   </style>
 </head>
 <body>
