--- a/index.html
+++ b/index.html
@@ -4,30 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Iniubong Ebong | Portfolio</title>
-    <meta name="title" content="Iniubong Ebong | Portfolio">
+    <title>Your Name | Portfolio</title>
+    <meta name="title" content="Your Name | Portfolio">
     <meta name="description" content="Modern Bento Grid portfolio featuring PayGuard AI and other innovative projects. Available for booking now.">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://wiper15.github.io/">
-    <meta property="og:title" content="Iniubong Ebong | Portfolio">
+    <meta property="og:title" content="Your Name | Portfolio">
     <meta property="og:description" content="Modern Bento Grid portfolio featuring PayGuard AI and other innovative projects.">
     <meta property="og:image" content="https://wiper15.github.io/og-image.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://wiper15.github.io/">
-    <meta property="twitter:title" content="Iniubong Ebong | Portfolio">
+    <meta property="twitter:title" content="Your Name | Portfolio">
     <meta property="twitter:description" content="Modern Bento Grid portfolio featuring PayGuard AI and other innovative projects.">
     <meta property="twitter:image" content="https://wiper15.github.io/og-image.jpg">
 
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 
     <style>
-        /* Smooth Scroll Reveal Animation */
+        /* Custom Reveal Animation */
         .reveal {
             opacity: 0;
             transform: translateY(20px);
-            transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+            transition: all 0.6s ease-out;
         }
         .reveal.active {
             opacity: 1;
@@ -35,70 +35,68 @@
         }
     </style>
 </head>
-<body class="bg-slate-50 text-slate-900 font-sans antialiased">
+<body class="bg-slate-50 text-slate-900 font-sans">
 
-    <header class="max-w-3xl mx-auto px-6 py-16 text-center">
-        <h1 class="text-5xl font-extrabold tracking-tight text-slate-900 mb-4">
-            Iniubong Ebong
+    <header class="max-w-6xl mx-auto px-6 py-12 text-center">
+        <h1 class="text-4xl md:text-6xl font-bold tracking-tight bg-gradient-to-r from-blue-600 to-indigo-600 bg-clip-text text-transparent">
+            Your Name
         </h1>
-        <p class="text-xl text-slate-600 font-medium">Full-Stack Developer & AI Specialist</p>
+        <p class="mt-4 text-lg text-slate-600">Full-Stack Developer & AI Specialist</p>
     </header>
 
-    <main class="max-w-3xl mx-auto px-6 pb-24">
-        <div class="flex flex-col gap-6">
+    <main class="max-w-6xl mx-auto px-6 pb-24">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
             
-            <div class="reveal bg-white p-8 rounded-3xl shadow-sm border border-slate-200">
+            <div class="reveal md:col-span-2 bg-white p-8 rounded-3xl shadow-sm border border-slate-200 hover:shadow-md transition-shadow">
                 <span class="text-xs font-bold uppercase tracking-wider text-blue-600">Featured Project</span>
                 <h2 class="text-3xl font-bold mt-2">PayGuard AI</h2>
-                <p class="mt-4 text-slate-600 leading-relaxed">An intelligent fraud detection system utilizing machine learning to secure transactions in real-time.</p>
-                <div class="mt-6 flex flex-wrap gap-2">
-                    <span class="px-3 py-1 bg-slate-100 rounded-full text-sm font-medium">Python</span>
-                    <span class="px-3 py-1 bg-slate-100 rounded-full text-sm font-medium">TensorFlow</span>
-                    <span class="px-3 py-1 bg-slate-100 rounded-full text-sm font-medium">Web3</span>
+                <p class="mt-4 text-slate-600">An intelligent fraud detection system utilizing machine learning to secure transactions in real-time.</p>
+                <div class="mt-6 flex gap-2">
+                    <span class="px-3 py-1 bg-slate-100 rounded-full text-sm">Python</span>
+                    <span class="px-3 py-1 bg-slate-100 rounded-full text-sm">TensorFlow</span>
                 </div>
             </div>
 
-            <div class="reveal bg-white p-8 rounded-3xl shadow-sm border border-slate-200 flex items-center justify-between">
+            <div class="reveal bg-indigo-600 p-8 rounded-3xl shadow-lg text-white flex flex-col justify-between">
                 <div>
-                    <h3 class="font-bold text-slate-900">AI Concierge</h3>
-                    <p class="text-sm text-slate-500">Service is currently offline for maintenance.</p>
+                    <h2 class="text-2xl font-bold">Work with me</h2>
+                    <p class="mt-2 text-indigo-100 text-sm">Currently accepting new projects and consultations.</p>
                 </div>
-                <span class="flex h-3 w-3 rounded-full bg-amber-400"></span>
-            </div>
-
-            <div class="reveal bg-white p-8 rounded-3xl shadow-sm border border-slate-200">
-                <h3 class="text-xl font-bold">Project Alpha</h3>
-                <p class="mt-2 text-slate-600">Automated cloud infrastructure deployment script for high-availability systems.</p>
-            </div>
-
-            <div class="reveal bg-indigo-600 p-8 rounded-3xl shadow-xl text-white">
-                <h2 class="text-2xl font-bold">Work with me</h2>
-                <p class="mt-2 text-indigo-100 opacity-90">Ready to build something amazing? I'm currently available for new contracts and consulting.</p>
-                <a href="mailto:your-email@example.com" class="mt-8 block w-full py-4 bg-white text-indigo-600 font-bold rounded-2xl text-center hover:bg-slate-50 transition-colors shadow-lg">
-                    Email Me Directly to Book
+                <a href="mailto:your-email@example.com" class="mt-8 block w-full py-3 bg-white text-indigo-600 font-bold rounded-xl text-center hover:bg-indigo-50 transition-colors">
+                    Email Me Directly
                 </a>
+            </div>
+
+            <div class="reveal bg-white p-8 rounded-3xl shadow-sm border border-slate-200 hover:shadow-md transition-shadow">
+                <h3 class="text-xl font-bold">Project Alpha</h3>
+                <p class="mt-2 text-slate-600 text-sm">Automated cloud infrastructure deployment script.</p>
+            </div>
+
+            <div class="reveal bg-slate-900 p-8 rounded-3xl shadow-sm text-white md:col-span-2 flex items-center justify-between">
+                <div>
+                    <h3 class="text-xl font-bold">AI Assistant</h3>
+                    <p class="text-slate-400 text-sm">Our AI concierge is currently refreshing (Offline).</p>
+                </div>
+                <div class="flex items-center gap-2">
+                    <span class="w-3 h-3 bg-amber-500 rounded-full animate-pulse"></span>
+                    <span class="text-xs font-mono text-slate-400">CREDIT RESET PENDING</span>
+                </div>
             </div>
 
         </div>
     </main>
 
-    <footer class="text-center pb-12 text-slate-400 text-sm">
-        <p>© 2026 Iniubong Ebong. Built with Tailwind v4.</p>
-    </footer>
-
     <script>
-        // Simple Intersection Observer for the 'reveal' class
-        const observerOptions = { threshold: 0.15 };
+        // Intersection Observer for Scroll Reveal
         const observer = new IntersectionObserver((entries) => {
             entries.forEach(entry => {
                 if (entry.isIntersecting) {
                     entry.target.classList.add('active');
                 }
             });
-        }, observerOptions);
+        }, { threshold: 0.1 });
 
         document.querySelectorAll('.reveal').forEach((el) => observer.observe(el));
     </script>
 </body>
 </html>
-
