--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Your Name | Portfolio</title>
+    <title>Iniubong Ebong | Portfolio</title>
     <meta name="title" content="Your Name | Portfolio">
     <meta name="description" content="Modern Bento Grid portfolio featuring PayGuard AI and other innovative projects. Available for booking now.">
 
