--- a/index.html
+++ b/index.html
@@ -5,29 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Iniubong Ebong | Portfolio</title>
-    <meta name="title" content="Your Name | Portfolio">
+    <meta name="title" content="Iniubong Ebong | Portfolio">
     <meta name="description" content="Modern Bento Grid portfolio featuring PayGuard AI and other innovative projects. Available for booking now.">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://wiper15.github.io/">
-    <meta property="og:title" content="Your Name | Portfolio">
+    <meta property="og:title" content="Iniubong Ebong | Portfolio">
     <meta property="og:description" content="Modern Bento Grid portfolio featuring PayGuard AI and other innovative projects.">
     <meta property="og:image" content="https://wiper15.github.io/og-image.jpg">
-
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://wiper15.github.io/">
-    <meta property="twitter:title" content="Your Name | Portfolio">
-    <meta property="twitter:description" content="Modern Bento Grid portfolio featuring PayGuard AI and other innovative projects.">
-    <meta property="twitter:image" content="https://wiper15.github.io/og-image.jpg">
 
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 
     <style>
-        /* Custom Reveal Animation */
         .reveal {
             opacity: 0;
             transform: translateY(20px);
-            transition: all 0.6s ease-out;
+            transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);
         }
         .reveal.active {
             opacity: 1;
@@ -35,25 +28,25 @@
         }
     </style>
 </head>
-<body class="bg-slate-50 text-slate-900 font-sans">
+<body class="bg-slate-50 text-slate-900 font-sans antialiased">
 
-    <header class="max-w-6xl mx-auto px-6 py-12 text-center">
-        <h1 class="text-4xl md:text-6xl font-bold tracking-tight bg-gradient-to-r from-blue-600 to-indigo-600 bg-clip-text text-transparent">
-            Your Name
+    <header class="max-w-3xl mx-auto px-6 py-16 text-center">
+        <h1 class="text-5xl font-extrabold tracking-tight text-slate-900 mb-4">
+            Iniubong Ebong
         </h1>
-        <p class="mt-4 text-lg text-slate-600">Full-Stack Developer & AI Specialist</p>
+        <p class="text-xl text-slate-600 font-medium">Full-Stack Developer & AI Specialist</p>
     </header>
 
     <main class="max-w-6xl mx-auto px-6 pb-24">
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
             
-            <div class="reveal md:col-span-2 bg-white p-8 rounded-3xl shadow-sm border border-slate-200 hover:shadow-md transition-shadow">
+            <div class="reveal md:col-span-2 bg-white p-8 rounded-3xl shadow-sm border border-slate-200">
                 <span class="text-xs font-bold uppercase tracking-wider text-blue-600">Featured Project</span>
                 <h2 class="text-3xl font-bold mt-2">PayGuard AI</h2>
-                <p class="mt-4 text-slate-600">An intelligent fraud detection system utilizing machine learning to secure transactions in real-time.</p>
+                <p class="mt-4 text-slate-600 leading-relaxed">An intelligent fraud detection system utilizing machine learning to secure transactions in real-time.</p>
                 <div class="mt-6 flex gap-2">
-                    <span class="px-3 py-1 bg-slate-100 rounded-full text-sm">Python</span>
-                    <span class="px-3 py-1 bg-slate-100 rounded-full text-sm">TensorFlow</span>
+                    <span class="px-3 py-1 bg-slate-100 rounded-full text-sm font-medium">Python</span>
+                    <span class="px-3 py-1 bg-slate-100 rounded-full text-sm font-medium">TensorFlow</span>
                 </div>
             </div>
 
@@ -67,7 +60,7 @@
                 </a>
             </div>
 
-            <div class="reveal bg-white p-8 rounded-3xl shadow-sm border border-slate-200 hover:shadow-md transition-shadow">
+            <div class="reveal bg-white p-8 rounded-3xl shadow-sm border border-slate-200">
                 <h3 class="text-xl font-bold">Project Alpha</h3>
                 <p class="mt-2 text-slate-600 text-sm">Automated cloud infrastructure deployment script.</p>
             </div>
@@ -79,15 +72,18 @@
                 </div>
                 <div class="flex items-center gap-2">
                     <span class="w-3 h-3 bg-amber-500 rounded-full animate-pulse"></span>
-                    <span class="text-xs font-mono text-slate-400">CREDIT RESET PENDING</span>
+                    <span class="text-xs font-mono text-slate-400 uppercase tracking-widest">Credit Reset Pending</span>
                 </div>
             </div>
 
         </div>
     </main>
 
+    <footer class="text-center pb-12 text-slate-400 text-sm">
+        <p>© 2026 Iniubong Ebong. All Rights Reserved.</p>
+    </footer>
+
     <script>
-        // Intersection Observer for Scroll Reveal
         const observer = new IntersectionObserver((entries) => {
             entries.forEach(entry => {
                 if (entry.isIntersecting) {
@@ -100,3 +96,4 @@
     </script>
 </body>
 </html>
+
